# BadUSB_passStealer

./: .gitignore  BadUSB_passStealer.txt  ciaoV2.complete.ps1  ciaoV2.ps1  pass_grabber.txt
other_files/: fin.ps1
uploader/: README.md  compile.ps1  core.py  pyproject.toml
